--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
+/public/CubismSdkForWeb-5-r.1/Samples/TypeScript/Demo/node_modules
 
 # testing
 /coverage
